<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">birthdayReminder</string>
    <string name="action_sign_in">Sign In</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">in</string>
    <string name="prompt_username">username</string>
    <string name="invalid_credentials">Invalid credentials</string>
    <string name="username_already_used">Username already used</string>
    <string name="email_already_used">Email already used</string>
    <string name="error_field_required">Missing required field</string>
    <string name="text_connected">Connected</string>
    <string name="text_not_connected_activity">No internet connection</string>
    <string name="text_not_connected">No Internet</string>
    <string name="register">Register</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_confirm_password">confirm password</string>
    <string name="title_regsitration">Registration</string>
    <string name="login_title">Login</string>
    <string name="login">Login</string>
    <string name="not_authenticated_anymore">You are not authenticated anymore, please sign in.</string>
    <string name="January">January</string>
    <string name="February">February</string>
    <string name="March">March</string>
    <string name="April">April</string>
    <string name="May">May</string>
    <string name="June">June</string>
    <string name="July">July</string>
    <string name="August">August</string>
    <string name="September">September</string>
    <string name="October">October</string>
    <string name="November">November</string>
    <string name="December">December</string>
    <string name="add_birthdate">Add a birthdate</string>
    <string name="firstname_input">Firstname</string>
    <string name="lastname_input">Lastname</string>
    <string name="add">ADD</string>
    <string name="dateFormat">YYYY-MM-DD</string>
    <string name="edit_birthdate">EDIT BIRTHDATE</string>
    <string name="edit_button">EDIT</string>
</resources>